Add JVM opts to prevent reflection errors